--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ECS\ECSManager.cs" />
     <Compile Include="ECS\Entity.cs" />
     <Compile Include="ECS\System.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
