--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -57,9 +57,13 @@
     <Compile Include="Rendering\Renderer.cs" />
     <Compile Include="Rendering\Shader.cs" />
     <Compile Include="Rendering\VertexArrayObjects.cs" />
+    <Compile Include="src\Components\Camera.cs" />
+    <Compile Include="src\Components\PlayerInput.cs" />
     <Compile Include="src\Components\RenderAble.cs" />
     <Compile Include="src\Systems\Initializer.cs" />
+    <Compile Include="src\Systems\PlayerMovement.cs" />
     <Compile Include="src\Systems\RendererSystem.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
   <ItemGroup>
