--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -44,34 +44,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ECS\Component.cs" />
-    <Compile Include="ECS\ECSManager.cs" />
-    <Compile Include="ECS\Entity.cs" />
-    <Compile Include="ECS\System.cs" />
-    <Compile Include="EventManager.cs" />
-    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rendering\BufferLayout.cs" />
-    <Compile Include="Rendering\BufferObject.cs" />
-    <Compile Include="Rendering\Renderer.cs" />
-    <Compile Include="Rendering\Shader.cs" />
-    <Compile Include="Rendering\VertexArrayObjects.cs" />
-    <Compile Include="src\Components\Camera.cs" />
-    <Compile Include="src\Components\PlayerInput.cs" />
-    <Compile Include="src\Components\RenderAble.cs" />
-    <Compile Include="src\Systems\Initializer.cs" />
-    <Compile Include="src\Systems\PlayerMovement.cs" />
-    <Compile Include="src\Systems\RendererSystem.cs" />
-    <Compile Include="Time.cs" />
-    <Compile Include="Window.cs" />
+    <Compile Include="Source\Components\Camera.cs" />
+    <Compile Include="Source\Components\PlayerInput.cs" />
+    <Compile Include="Source\Components\RenderAble.cs" />
+    <Compile Include="Source\ECS\Component.cs" />
+    <Compile Include="Source\ECS\ECSManager.cs" />
+    <Compile Include="Source\ECS\Entity.cs" />
+    <Compile Include="Source\ECS\System.cs" />
+    <Compile Include="Source\General\EventManager.cs" />
+    <Compile Include="Source\General\Logger.cs" />
+    <Compile Include="Source\General\Time.cs" />
+    <Compile Include="Source\Rendering\BufferLayout.cs" />
+    <Compile Include="Source\Rendering\BufferObject.cs" />
+    <Compile Include="Source\Rendering\Renderer.cs" />
+    <Compile Include="Source\Rendering\Shader.cs" />
+    <Compile Include="Source\Rendering\VertexArrayObjects.cs" />
+    <Compile Include="Source\Systems\Initializer.cs" />
+    <Compile Include="Source\Systems\PlayerMovement.cs" />
+    <Compile Include="Source\Systems\RendererSystem.cs" />
+    <Compile Include="Source\Window.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="basic.shade">
+    <Content Include="Ressources\basic.shade">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
