--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -46,34 +46,34 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Source\Components\Camera.cs" />
-    <Compile Include="Source\Components\PlayerInput.cs" />
-    <Compile Include="Source\Components\RenderAble.cs" />
-    <Compile Include="Source\ECS\Component.cs" />
-    <Compile Include="Source\ECS\ECSManager.cs" />
-    <Compile Include="Source\ECS\Entity.cs" />
-    <Compile Include="Source\ECS\System.cs" />
-    <Compile Include="Source\General\EventManager.cs" />
-    <Compile Include="Source\General\Logger.cs" />
-    <Compile Include="Source\General\Time.cs" />
-    <Compile Include="Source\Rendering\BufferLayout.cs" />
-    <Compile Include="Source\Rendering\BufferObject.cs" />
-    <Compile Include="Source\Rendering\IndexBuffer.cs" />
-    <Compile Include="Source\Rendering\Renderer.cs" />
-    <Compile Include="Source\Rendering\Shader.cs" />
-    <Compile Include="Source\Rendering\VertexArrayObjects.cs" />
-    <Compile Include="Source\Rendering\VertexBuffer.cs" />
-    <Compile Include="Source\Systems\Initializer.cs" />
-    <Compile Include="Source\Systems\PlayerMovement.cs" />
-    <Compile Include="Source\Systems\RendererSystem.cs" />
-    <Compile Include="Source\Window.cs" />
+    <Compile Include="src\Components\Camera.cs" />
+    <Compile Include="src\Components\PlayerInput.cs" />
+    <Compile Include="src\Components\RenderAble.cs" />
+    <Compile Include="src\ECS\Component.cs" />
+    <Compile Include="src\ECS\ECSManager.cs" />
+    <Compile Include="src\ECS\Entity.cs" />
+    <Compile Include="src\ECS\System.cs" />
+    <Compile Include="src\General\EventManager.cs" />
+    <Compile Include="src\General\Logger.cs" />
+    <Compile Include="src\General\Time.cs" />
+    <Compile Include="src\Rendering\BufferLayout.cs" />
+    <Compile Include="src\Rendering\BufferObject.cs" />
+    <Compile Include="src\Rendering\IndexBuffer.cs" />
+    <Compile Include="src\Rendering\Renderer.cs" />
+    <Compile Include="src\Rendering\Shader.cs" />
+    <Compile Include="src\Rendering\VertexArrayObjects.cs" />
+    <Compile Include="src\Rendering\VertexBuffer.cs" />
+    <Compile Include="src\Systems\Initializer.cs" />
+    <Compile Include="src\Systems\PlayerMovement.cs" />
+    <Compile Include="src\Systems\RendererSystem.cs" />
+    <Compile Include="src\Window.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Ressources\basic.shade">
+    <Content Include="res\basic.shade">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
