--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Components\Camera.cs" />
     <Compile Include="src\Components\PlayerInput.cs" />
-    <Compile Include="src\Components\RenderAble.cs" />
+    <Compile Include="src\Components\Terrain.cs" />
     <Compile Include="src\ECS\Component.cs" />
     <Compile Include="src\ECS\ECSManager.cs" />
     <Compile Include="src\ECS\Entity.cs" />
@@ -90,7 +90,7 @@
     <Content Include="mods\biome_typography.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="res\basic.shade">
+    <Content Include="res\terrain.shade">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
