Basic biome blending

--- a/WorldOfCode/WorldOfCode.csproj
+++ b/WorldOfCode/WorldOfCode.csproj
@@ -55,24 +55,24 @@
     <Compile Include="src\Components\Camera.cs" />
     <Compile Include="src\Components\PlayerInput.cs" />
     <Compile Include="src\Components\Terrain.cs" />
-    <Compile Include="src\ECS\Component.cs" />
-    <Compile Include="src\ECS\ECSManager.cs" />
-    <Compile Include="src\ECS\Entity.cs" />
-    <Compile Include="src\ECS\System.cs" />
     <Compile Include="src\General\Direction.cs" />
+    <Compile Include="src\General\ECS\Component.cs" />
+    <Compile Include="src\General\ECS\ECSManager.cs" />
+    <Compile Include="src\General\ECS\Entity.cs" />
+    <Compile Include="src\General\ECS\System.cs" />
     <Compile Include="src\General\EventManager.cs" />
     <Compile Include="src\General\Logger.cs" />
     <Compile Include="src\General\Map.cs" />
+    <Compile Include="src\General\ModLoader.cs" />
+    <Compile Include="src\General\Rendering\BufferLayout.cs" />
+    <Compile Include="src\General\Rendering\BufferObject.cs" />
+    <Compile Include="src\General\Rendering\IndexBuffer.cs" />
+    <Compile Include="src\General\Rendering\Renderer.cs" />
+    <Compile Include="src\General\Rendering\Shader.cs" />
+    <Compile Include="src\General\Rendering\VertexArray.cs" />
+    <Compile Include="src\General\Rendering\VertexBuffer.cs" />
     <Compile Include="src\General\TerrainVertex.cs" />
     <Compile Include="src\General\Time.cs" />
-    <Compile Include="src\Modding\ModLoader.cs" />
-    <Compile Include="src\Rendering\BufferLayout.cs" />
-    <Compile Include="src\Rendering\BufferObject.cs" />
-    <Compile Include="src\Rendering\IndexBuffer.cs" />
-    <Compile Include="src\Rendering\Renderer.cs" />
-    <Compile Include="src\Rendering\Shader.cs" />
-    <Compile Include="src\Rendering\VertexArray.cs" />
-    <Compile Include="src\Rendering\VertexBuffer.cs" />
     <Compile Include="src\Systems\Initializer.cs" />
     <Compile Include="src\Systems\PlayerMovement.cs" />
     <Compile Include="src\Systems\TerrainSystem.cs" />
